# OpenGLTest

./: CMakeLists.txt  Circle.cpp  Circle.h  Coordinates.h  Figure.cpp  Figure.h  Graphics.cpp  Graphics.h  Rectangle.cpp  Rectangle.h  ShaderManipulator.cpp  ShaderManipulator.h  Triangle.cpp  Triangle.h  main.cpp
assets/: colour.glsl  vertex.glsl
